# ilia-cli

./: .gitignore  3root.py  apd.bat  deploy.bat  e.py  idk.html  installer.bat  installer.py  manifest.md  schematic_deploy.bat  schematic_deploy.py  schematic_deploy_new.py  une.py
__pycache__/: schematic_deploy.cpython-312.pyc.2128635142256
telemetry/: Dockerfile  docker-compose.yml  gunicorn_config.py  requirements.txt  start_server.bat  start_server.sh  telemetry_server.py
telemetry/telemetry_logs/: sessions.json  statistics.json
templates/: available.inf
templates/actix/: Cargo.toml  manifest.json
templates/astro/: manifest.json  package.json
templates/axum/: Cargo.toml  manifest.json
templates/axum/src/: main.rs
templates/bun/: README.md  manifest.json  package.json
templates/cli/: README.md  cli.py  manifest.json  requirements.txt  setup.py
templates/deno/: README.md  deno.json  main.ts  manifest.json
templates/discord-bot/: README.md  bot.py  manifest.json  requirements.txt
templates/django/: README.md  manage.py  manifest.json  requirements.txt
templates/docker/: Dockerfile  README.md  docker-compose.yml  manifest.json
templates/dotnet/: README.md  manifest.json
templates/electron/: README.md  index.html  main.js  manifest.json  package.json
templates/express/: .env.example  index.js  manifest.json  package.json
templates/fastapi/: .env.example  README.md  main.py  manifest.json
templates/fastapi-sql/: app.py  manifest.json  requirements.txt
templates/fastify/: manifest.json  package.json
templates/fiber/: go.mod  main.go  (+1 more)
(+159 files in other folders)
