[package]
name = "{{ project_name }}"
version = "{{ version }}"
edition = "2021"
description = "{{ description }}"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
